--- a/src/app/components/dominios/dominios.component.html
+++ b/src/app/components/dominios/dominios.component.html
@@ -1,31 +1,16 @@
 <div class="container mt-3 mb-3">
     <div class="card-body">
-      <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1;">Cerrar Sesion</button>
-      <span class="h1">DOMINIOS</span>
-      <br>
+        <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1;">Cerrar Sesion</button>
+        <span class="h1">DOMINIOS</span>
+        <br>
     </div>
-    <div class="list-group">
-        <label class="list-group-item">
-          <input class="form-check-input me-1" type="checkbox" value="">
-          PLANEAR Y ORGANIZAR (PO)<br>
-          Cubre la estrategia y las tácticas, se refiere a la identificación de la forma en que la tecnología de la información puede contribuir de la mejor manera al logro de los objetivos de la organización. La consecución de la visión estratégica debe ser planeada, comunicada y administrada desde diferentes perspectivas y debe establecerse una organización y una infraestructura tecnológicas apropiadas. 
-        </label>
-        <label class="list-group-item">
-          <input class="form-check-input me-1" type="checkbox" value="">
-          ADQUIRIR E IMPLEMENTAR (AI)<br>
-          Para llevar a cabo la estrategia de TI, las soluciones de TI deben ser identificadas, desarrolladas o adquiridas, así como implementadas e integradas dentro del proceso del negocio. Además, este dominio cubre los cambios y el mantenimiento realizados a sistemas existentes. 
-        </label>
-        <label class="list-group-item">
-          <input class="form-check-input me-1" type="checkbox" value="">
-          ENTREGAR Y DAR SOPORTE (ES)<br>
-          En este dominio se hace referencia a la entrega de los servicios requeridos, que abarca desde las operaciones tradicionales hasta el entrenamiento, pasando por seguridad y aspectos de continuidad. Con el fin de proveer servicios, deberán establecerse los procesos de soporte necesarios. Este dominio incluye el procesamiento de los datos por sistemas de aplicación, frecuentemente clasificados como controles de aplicación.
-        </label>
-        <label class="list-group-item">
-          <input class="form-check-input me-1" type="checkbox" value="">
-          MONITOREAR Y EVALUAR (ME)<br>
-          Todos los procesos de una organización necesitan ser evaluados regularmente a través del tiempo para verificar su calidad y suficiencia en cuanto a los requerimientos de control, disponibilidad, integridad y confidencialidad.  
-        </label>
-      </div>
+    <div class="list-group" *ngFor="let dominio of dominios">
+        <label class="list-group-item" style="width:600px">
+        <input class="form-check-input me-1" type="checkbox" value="">
+        {{dominio.titulo}} - {{dominio.acronimo}}<br>
+        {{dominio.descripcion}}
+      </label>
+    </div>
     <br>
     <button class="btn btn-lg btn-primary m-2 float-start" routerLink="/pagprincipal" style="background-color: #003ca1;">Volver Pagina Principal</button>
     <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/procesos" style="background-color: #003ca1;">Siguiente</button>
