--- a/src/app/components/procesos/procesos.component.html
+++ b/src/app/components/procesos/procesos.component.html
@@ -1,27 +1,28 @@
-    <div class="container mt-3 mb-3">
-        <div class="card-body">
-          <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1;">Cerrar Sesion</button>
-          <span class="h1">PROCESOS</span>
-          <br>
-        </div>
+<div class="container mt-3 mb-3">
+    <div class="card-body">
+        <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1;">Cerrar Sesion</button>
+        <span class="h1">PROCESOS</span>
         <br>
-        <div class="row">
-            <div class="col-lg-4" *ngFor="let proceso of procesos">
-                <div class="card border-primary mb-3" style="max-width: 25rem; height: 350px; max-height: 400px;">
-                    <div class="card-header">{{proceso.name}}</div>
-                    <div class="card-body text-primary">
-                      <h5 class="card-title">{{proceso.title}}</h5>
-                      <p class="card-text">{{proceso.description}}</p>
-                      <div class="form-check">
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-lg-4" *ngFor="let proceso of procesosLista">
+            <div class="card border-primary mb-3" style="max-width: 25rem; height: 350px; max-height: 400px;">
+                <div class="card-header"></div>
+                <div class="card-body text-primary">
+                    <h5 class="card-title">aasdsa</h5>
+                    {{log(proceso)}} {{log("sdgfsaf")}}
+                    <p class="card-text">{{proceso.procesos["PO1"].descripcion}</p>
+                    <div class="form-check">
                         <input class="form-check-input me-1" type="checkbox" value="" id="flexCheckDefault">
                         <label class="form-check-label" for="flexCheckDefault">
                           AGREGAR
                         </label>
-                      </div>
                     </div>
-                  </div>
-                <br>
-            </div> 
+                </div>
+            </div>
+            <br>
+        </div>
     </div>
     <button class="btn btn-lg btn-primary m-2 float-start" routerLink="/dominios" style="background-color: #003ca1;">Volver Dominios</button>
     <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/evaluacion" style="background-color: #003ca1;">Siguiente</button>
