--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -323,4 +323,18 @@
     </table>
     <br /><br /><br /><br /><br />
   </div>
+  <button
+    class="btn btn-lg btn-primary m-2 float-start"
+    routerLink="/procesos"
+    style="background-color: #003ca1"
+  >
+    Volver Procesos
+  </button>
+  <button
+    class="btn btn-lg btn-primary m-2 float-end"
+    routerLink="/pagprincipal"
+    style="background-color: #003ca1"
+  >
+    Finalizar
+  </button>
 </body>
