--- a/src/app/components/procesos/procesos.component.html
+++ b/src/app/components/procesos/procesos.component.html
@@ -12,7 +12,7 @@
   </div>
   <br />
   <div class="row">
-    <div class="col-lg-4" *ngFor="let proceso of procesosLista">
+    <div class="col-lg-4" *ngFor="let proceso of procesosListaPO">
       <div
         class="card border-primary mb-3"
         style="max-width: 25rem; height: 350px; max-height: 400px"
@@ -20,7 +20,7 @@
         <div class="card-header"></div>
         <div class="card-body text-primary">
           <h5 class="card-title">aasdsa</h5>
-          <p class="card-text">{{proceso.procesos["PO1"].descripcion}</p>
+          <p class="card-text">{{ imprimirLog("aaa") }}</p>
           <div class="form-check">
             <input
               class="form-check-input me-1"
