arregle lo mal q estaba dominios pero quite funcionalidad
debi escribir eso en descripcion

--- a/src/app/components/dominios/dominios.component.html
+++ b/src/app/components/dominios/dominios.component.html
@@ -15,7 +15,7 @@
       class="form-check-input me-1"
       type="checkbox"
       value=""
-      (change)="fieldsChange($event, dominio.id_dominios)"
+      (change)="fieldsChange($event, dominio.acronimo)"
     />
     {{ dominio.titulo }} - {{ dominio.acronimo }}<br />
     {{ dominio.descripcion }}
