--- a/src/app/components/procesos/procesos.component.html
+++ b/src/app/components/procesos/procesos.component.html
@@ -25,6 +25,7 @@
               type="checkbox"
               value=""
               id="flexCheckDefault"
+              (change)="fieldsChange($event, proceso.acronimo)"
             />
             <label class="form-check-label" for="flexCheckDefault">
               AGREGAR
