+100 en diseño de la pagina
los dominios ahora estan en el centro xD

--- a/src/app/components/dominios/dominios.component.html
+++ b/src/app/components/dominios/dominios.component.html
@@ -9,7 +9,7 @@
   <span class="h1">DOMINIOS</span>
   <br />
 </div>
-<div class="list-group" *ngFor="let dominio of dominios">
+<div class="list-group separar" *ngFor="let dominio of dominios">
   <label class="list-group-item" style="width: 600px">
     <input
       class="form-check-input me-1"
