--- a/src/app/components/reporte-final/reporte-final.component.html
+++ b/src/app/components/reporte-final/reporte-final.component.html
@@ -70,5 +70,12 @@
       </ol>
 
 
-    <button type="button" (click)='createPdf()')>Descargar Reporte (.PDF)</button>
+   
+      <button
+      class="btn btn-lg btn-primary m-2 float-end"
+      style="background-color: #003ca1"
+      (click)="createPdf()"
+    >
+      Generar PDF
+    </button>
 </body>
