--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -332,7 +332,7 @@
   </button>
   <button
     class="btn btn-lg btn-primary m-2 float-end"
-    routerLink="/reporte"
+    routerLink="/reporte-final"
     style="background-color: #003ca1"
   >
     Finalizar
