--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -53,8 +53,8 @@
           >
             Iniciar Sesion
           </button>
-          <!--<p class="small fw-bold mt-2 pt-1 mb-0">¿No tiene una cuenta? <a href="#!"
-                class="link-danger">Registrese</a></p>-->
+          <p class="small fw-bold mt-2 pt-1 mb-0">¿No tiene una cuenta? <a href="registro"
+                class="link-danger">Registrese</a></p>
         </div>
       </form>
     </div>
