--- a/src/app/components/pagprincipal/pagprincipal.component.html
+++ b/src/app/components/pagprincipal/pagprincipal.component.html
@@ -1,25 +1,14 @@
 <div class="container mt-3 mb-3">
-  <div class="card-body">
-    <button
-      class="btn btn-lg btn-primary m-2 float-end"
-      routerLink="/login"
-      style="background-color: #003ca1"
-    >
+    <div class="card-body">
+        <button class="btn btn-lg btn-primary m-2 float-end" routerLink="/login" style="background-color: #003ca1">
       Cerrar Sesion
     </button>
-    <span class="h1">BIENVENIDO</span>
-    <br />
-    <span class="h1">AREAS PARA AUDITORIA</span>
-    <br />
-  </div>
-  <div class="list-group" *ngFor="let area of areas">
-    <button
-      type="button"
-      class="list-group-item list-group-item-action"
-      routerLink="/dominios"
-      (click)="seleccionArea(area.id_area)"
-    >
+        <span class="h1">AREAS PARA REALIZAR AUDITORIA</span>
+        <br />
+    </div>
+    <div class="list-group" *ngFor="let area of areas">
+        <button type="button" class="list-group-item list-group-item-action" routerLink="/dominios" (click)="seleccionArea(area.id)">
       {{ area.nombre }}
     </button>
-  </div>
+    </div>
 </div>
