--- a/src/app/components/procesos/procesos.component.html
+++ b/src/app/components/procesos/procesos.component.html
@@ -41,7 +41,7 @@
                 <th scope="row">{{ recurso.id_recurso }}</th>
                 <td>
                     <div class="form-check">
-                        <input class="form-check-input center" type="checkbox" value="" id="flexCheckDefault" (change)="fieldsChange2($event, recurso.id_recurso)" />
+                        <input class="form-check-input center" type="checkbox" value="" id="flexCheckDefault" (change)="fieldsChange2($event, recurso.nombre)" />
                     </div>
                 </td>
                 <td>{{ recurso.nombre }}</td>
