--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -31,7 +31,8 @@
             Registrarse
           </button>
                     <p class="small fw-bold mt-2 pt-1 mb-0">
-                        ¿Ya ? <a href="login" class="link-danger">Ir.</a>
+                        ¿Ya tiene cuenta?
+                        <a routerLink="/login" class="link-danger">Iniciar Sesion</a>
                     </p>
                 </div>
             </form>
