--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -24,7 +24,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ efectividad }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -36,7 +38,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ eficiencia }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -48,7 +52,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ confidencialidad }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -60,7 +66,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ integridad }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -72,7 +80,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ disponibilidad }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -84,7 +94,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ cumplimiento }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -96,7 +108,9 @@
                         <div class="center">
                             <ul class="menu" data-animation="left">
                                 <a href="#0">
-                                    <h4>Total: <span>50</span></h4>
+                                    <h4>
+                                        Total: <span>{{ confiabilidad }}</span>
+                                    </h4>
                                 </a>
                             </ul>
                         </div>
@@ -111,13 +125,10 @@
                 Con la automatización de estos procesos, se considera que los CRITERIOS que se cumplen mayoritariamente son:
             </h4>
             <br />
-            <h4>- CRITERIO 1</h4>
-            <h4>- CRITERIO n</h4>
+            <span *ngFor="let criterio of listaCriteriosOrdenados">
+        <h4>{{ criterio.nombre }} {{ criterio.valor }}</h4>
+      </span>
             <br />
-            <h4>Y adicionalmente se cubre::</h4>
-            <br />
-            <h4>- CRITERIO SECUNDARIO 1</h4>
-            <h4>- CRITERIO SECUNDARIO n</h4>
         </div>
 
         <br /><br />
